networkpolicy/networkpolicy__basic_kafka_setup__grafana__exception__system__egress__ports__53__nr6__lines20.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana--exception--system--egress--ports--53--nr6
  namespace: grafana
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
